--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 
@@ -29,14 +29,14 @@
             <a class="btn" href="https://www.youtube.com/" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="/images/my-bg.png" alt="my-bg">
+            <img src="images/my-bg.png" alt="my-bg">
         </div>
     </section>
 
 
     <section class="dream-area flexible">
         <div class="half-width">
-            <img src="/images/my-bg2.png" alt="my-bg">
+            <img src="images/my-bg2.png" alt="my-bg">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
